<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!-- input login -->
        <EditText
            android:id="@+id/login_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"/>

        <!-- input password -->
        <EditText
            android:id="@+id/password_input"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="300dp"/>

        <!-- text login -->
        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_login"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toStartOf="@id/login_input"
            android:layout_alignBaseline="@id/login_input"/>

        <!-- text password -->
        <TextView
            android:id="@+id/text_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_toStartOf="@id/password_input"
            android:layout_alignBaseline="@id/password_input"/>

        <!-- text new account -->
        <TextView
            android:id="@+id/text_newAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_newAccount"
            android:clickable="true"
            android:onClick="myClick"
            android:selectAllOnFocus="true"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="550dp"
            android:layout_centerHorizontal="true"/>

        <!-- text bonjour -->
        <TextView
            android:id="@+id/text_bienvenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_bienvenu"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"/>


        <!-- button connect -->
        <Button
            android:id="@+id/button_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_connect"
            android:backgroundTint="@color/grey"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="450dp"/>




    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>